# astal

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  default.nix  flake.nix  meson-install.sh  meson.build  meson_options.txt  uncrustify.cfg  vercel.json
apps/: README.md  (+2 more)
core/: meson.build
core/gjs/: .gitignore  package-lock.json  package.json  tsconfig.json
core/gjs/src/: application.ts  astalify.ts  file.ts  gobject.ts  imports.ts  process.ts  variable.ts  widgets.ts
core/lua/: astal-dev-1.rockspec  test.lua
core/lua/astal/: application.lua  init.lua  process.lua  variable.lua  widget.lua
core/python/: pyproject.toml
core/python/astal/: __init__.py  application.py  binding.py  variable.py  widget.py
core/src/: astal.vala  idle-inhibit.c  idle-inhibit.h  meson.build  process.vala  variable.vala
core/src/vapi/: AstalInhibitManager.vapi
core/src/widget/: box.vala  button.vala  circularprogress.vala  eventbox.vala  icon.vala  slider.vala  stack.vala  window.vala
core/vapi/: AstalInhibitManager.vapi
examples/: .gitignore  README.md  full_example.c  meson.build  simple_example.c  simple_example.js
examples/gtk3/lua/: stylua.toml
examples/js/: .gitignore
examples/js/applauncher/: style.scss
examples/js/media-player/: app.ts  style.scss
examples/js/notifications/: README.md
examples/js/simple-bar/: README.md  app.ts  style.scss
examples/lua/applauncher/: README.md  init.lua
examples/lua/media-player/: README.md  style.scss
examples/lua/notification-popups/: init.lua  lib.lua  style.scss
examples/lua/notifications/: README.md  lib.lua  style.scss
examples/lua/simple-bar/: README.md  app.lua  init.lua  style.scss
examples/py/: .gitignore
examples/py/simple-bar/: README.md  app.py  versions.py
examples/py/starter-bar/: README.md  app.py  style.css  versions.py
examples/vala/simple-bar/: app.in.vala  app.vala  flake.nix  meson.build
lang/gjs/: default.nix  eslint.config.mjs  index.ts  meson.build  package-lock.json  package.json  tsconfig.json
lang/gjs/gtk3/: astalify.ts
lang/gjs/lib/: process.ts
lang/gjs/src/: _app.ts  _astal.ts  binding.ts  file.ts  gobject.ts  index.ts  overrides.ts  package.json  process.ts  time.ts  variable.ts
lib/astal-wl/: config.vala.in  default.nix  meson.build  output.vala  registry.vala  seat.vala  utils.vala  wl-source.vala  wl_display.c
lib/astal-wl/subprojects/: wl-vapi-gen.wrap
lib/astal/gtk4/: default.nix  meson.build
lib/astal/io/: application.vala  cli.vala  config.vala.in  daemon.vala  default.nix  file.vala  gir.py  meson.build  process.vala  time.vala  variable.vala
lib/auth/: default.nix  meson.build  meson_options.txt
lib/auth/include/: astal-auth.h  astal-auth.h.in  meson.build
lib/auth/src/: meson.build  pam.c
lib/bluetooth/: adapter.vala  battery.vala  bluetooth.vala  config.vala.in  default.nix  device.vala  interfaces.vala  meson.build
lib/bluetooth/src/: adapter.vala  battery.vala  bluetooth.vala  config.vala.in  device.vala  interfaces.vala  utils.vala
lib/cava/: .gitignore  astal-cava.h  cava.c  default.nix  meson.build
lib/cava/subprojects/: cava.wrap  libcava.wrap
lib/clipboard/include/: astal-clipboard-private.h  astal-clipboard.h.in  meson.build
lib/clipboard/src/: cli.vala  clipboard.c  clipboard.vala  config.vala.in  daemon.vala  data.vala  meson.build  offer.vala  proxy.vala  selection.c
lib/hyprland/: client.vala  config.vala.in  default.nix  hyprland.vala  meson.build  monitor.vala  structs.vala
lib/hyprland-focus-grab/: default.nix  meson.build  meson.options
lib/hyprland-focus-grab/protocols/: hyprland-focus-grab-v1.xml  meson.build
lib/hyprland-focus-grab/src/: config.vala.in  context.vala  grab.vala  manager.vala  window-surface-gtk3.c  window-surface-gtk4.c
lib/hyprland-focus-grab/subprojects/: wl-vapi-gen.wrap
lib/hyprland/src/: cli.vala  client.vala  config.vala.in  group.vala  hyprland.vala  monitor.vala  structs.vala  workspace.vala
lib/mpris/: cli.vala  config.vala.in  default.nix  ifaces.vala  meson.build  meson.options  mpris.vala  player.vala
lib/mpris/src/: cli.vala  config.vala.in  mpris.vala  player.vala  proxy.vala
lib/network/: accesspoint.vala  accesspoint_profile.vala  astal-network.deps  config.vala.in  default.nix  meson.build  network.vala  wifi.vala
lib/network/src/: accesspoint.vala  config.vala.in  network.vala  wifi.vala  wired.vala
lib/niri/: cli.vala  config.vala.in  default.nix  ipc.vala  meson.build  msg.vala  niri.vala  output.vala  overview.vala  structs.vala  window.vala  workspace.vala
lib/notifd/: cli.vala  config.vala.in  daemon.vala  default.nix  meson.build  notifd.vala  notification.vala  proxy.vala  signals.md
lib/notifd/src/: action.vala  cli.vala  config.vala.in  daemon.vala  enums.vala  gschema.xml  notifd.vala  notification.vala  proxy.vala  send.vala
lib/quarrel/: default.nix  gir.py  meson.build
lib/quarrel/src/: command.vala  help.vala  opt.vala
lib/river/: astal-river.deps  default.nix  meson.build
lib/river/include/: astal-river.h  astal-river.h.in  meson.build  river-private.h
lib/tray/: config.vala.in  default.nix  meson.build  tray.vala  trayItem.vala  watcher.vala
lib/wayland-glib/: meson.build  wl-source.vala
src/: accesspoint.vala  application.vala  apps.vala  astal-auth.c  astal-river.c  astal.vala  audio.c  cli.vala  cli.vala.in  client.vala.in  config.vala.in  daemon.vala  device.c  device.vala  endpoint.c  file.vala  hyprland.vala  ifaces.vala  kbd.vala  match.vala  meson.build  mpris.vala  network.vala  notifd.vala  notification.vala  pam.c  player.vala  power-profiles.vala  process.vala  profile.c  profiles.vala  proxy.vala  river-output.c  river.c  signals.md  time.vala  tray.vala  trayItem.vala  utils.vala  variable.vala  (+7 more)
src/widget/: box.vala  button.vala  centerbox.vala  circularprogress.vala  eventbox.vala  icon.vala  label.vala  levelbar.vala  overlay.vala  scrollable.vala  slider.vala  widget.vala  window.vala
tray/: README.md  meson.build
tray/src/: cli.vala  config.vala.in  meson.build  tray.vala  watcher.vala
(+676 files in other folders)
